--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/Quizzy_app_db?allowPublicKeyRetrieval=true&autoReconnect=true&useSSL=false
 
 #dev local
-spring.datasource.username=root
-spring.datasource.password=arsene@123
+spring.datasource.username=
+spring.datasource.password=
 
 #dev server
 #spring.datasource.username=root
