--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
 # database setup
-spring.datasource.url=jdbc:mysql://localhost:3306/Quizzy_app_db
+spring.datasource.url=jdbc:mysql://localhost:3306/Quizzy_app_testdb
 
 #dev local
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=arsene@123
 
 #dev server
 #spring.datasource.username=root
@@ -13,17 +13,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.mail.host=localhost
-spring.mail.port=1025
-spring.mail.username=hello
-spring.mail.password=hello
-spring.mail.properties.mail.smtp.ssl.trust = *
-spring.mail.properties.mail.smtp.auth = true
-spring.mail.properties.mail.smtp.starttls.enable = true
-spring.mail.properties.mail.smtp.connectiontimeout = 5000
-spring.mail.properties.mail.smtp.timeout = 3000
-spring.mail.properties.mail.smtp.writetimeout = 5000
-
 #logging.level.org.hibernate.SQL=
 #spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 #spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
